@@ -3,6 +3,7 @@ Revision history for Net-Silverpeak-Orchestrator
 {{ $NEXT }}
     - add get_appliance_extrainfo method
     - add get_deployment method
+    - add get_interface_state method
 
 0.006000  2023-05-08 17:30:22+02:00 Europe/Budapest
     - add support for user/password login when Enforce CSRF Token Check is
